# my-new-pwa

./: .gitignore  package-lock.json  package.json  vite.config.ts
dev-dist/: sw.js
src/: App.svelte  i18n.ts  main.ts
src/lib/components/: Camera.svelte  JuiceTokenActionInitializer.svelte  QRDebugDemo.svelte  QRKiss.svelte  QRKissDebug.svelte  QRKissDemo.svelte  QRKissDirect.svelte  QRKissFinalize.svelte  QRKissMirrored.svelte  QRScannerDebug.svelte  QRScannerMirrored.svelte  QRTestPage.svelte  QrScanner.svelte  SimpleQRTest.svelte  TransactionManager.js
src/lib/pages/: QrScannerPage.svelte
src/locales/: en.json  es.json
token-engine/: Cargo.toml
